--- a/package.json
+++ b/package.json
@@ -21,17 +21,16 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-cloudformation": "1.124.0",
-    "@aws-cdk/aws-codebuild": "1.124.0",
-    "@aws-cdk/aws-codepipeline": "1.124.0",
-    "@aws-cdk/aws-codepipeline-actions": "1.124.0",
-    "@aws-cdk/aws-ec2": "1.124.0",
-    "@aws-cdk/aws-ecr": "1.124.0",
-    "@aws-cdk/aws-ecs": "1.124.0",
-    "@aws-cdk/aws-ecs-patterns": "1.124.0",
-    "@aws-cdk/aws-s3": "1.124.0",
-    "@aws-cdk/core": "1.124.0",
-    "@aws-cdk/pipelines": "^1.124.0",
-    "source-map-support": "^0.5.16"
+    "@aws-cdk/aws-cloudformation": "^1.125.0",
+    "@aws-cdk/aws-codebuild": "^1.125.0",
+    "@aws-cdk/aws-codepipeline": "^1.125.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.125.0",
+    "@aws-cdk/aws-ec2": "^1.125.0",
+    "@aws-cdk/aws-ecr": "^1.125.0",
+    "@aws-cdk/aws-ecs": "^1.125.0",
+    "@aws-cdk/aws-ecs-patterns": "^1.125.0",
+    "@aws-cdk/aws-s3": "^1.125.0",
+    "@aws-cdk/core": "^1.125.0",
+    "@aws-cdk/pipelines": "^1.125.0"
   }
 }
