--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@aws-cdk/aws-ecr": "^1.125.0",
     "@aws-cdk/aws-ecs": "^1.125.0",
     "@aws-cdk/aws-ecs-patterns": "^1.125.0",
+    "@aws-cdk/aws-iam": "^1.125.0",
     "@aws-cdk/aws-s3": "^1.125.0",
     "@aws-cdk/core": "^1.125.0",
     "@aws-cdk/pipelines": "^1.125.0"
