--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@aws-cdk/aws-codepipeline-actions": "^1.125.0",
     "@aws-cdk/aws-ec2": "^1.125.0",
     "@aws-cdk/aws-ecr": "^1.125.0",
+    "@aws-cdk/aws-ecr-assets": "^1.126.0",
     "@aws-cdk/aws-ecs": "^1.125.0",
     "@aws-cdk/aws-ecs-patterns": "^1.125.0",
     "@aws-cdk/aws-iam": "^1.125.0",
